Tab button alignment fix

--- a/src/scss/content/_tabs.scss
+++ b/src/scss/content/_tabs.scss
@@ -32,6 +32,11 @@
 
     cursor: pointer;
 
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+
     color: var(--vm-color-text);
     border: 0;
     border-radius: 60px;
